TestSuite/Verification/Error/Parallel/Correctness/On-Device/Intra-Region/CPU/out/includes/MapNestedTest.hxx

/*********************************************************************/
/*        This is a generated C++ Header file.                       */
/*        Generated by PatternDSL.                                   */
/*        Contains the function declarations for the source file     */
/*********************************************************************/

#ifndef MapNestedTest_HXX
#define MapNestedTest_HXX

uint randomizer(int n = 42) {
    srand(n);
    return rand();
}



#endif